# guiguts-py

./: .flake8  CHANGELOG.md  README.md  TODO.py  gg_mainimage.py  gg_maintext.py  gg_menu.py  gg_menubar.py  gg_prefs.py  gg_prefsdialog.py  gg_statusbar.py  gg_tkutils.py  guiguts.py  menubar.py  out=$oud  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py  index.rst
scripts/: generate_wiki_index.py
src/: child.py  file.py  gg_mainimage.py  gg_menu.py  gg_menubar.py  gg_prefs.py  gg_prefsdialog.py  gg_tkutils.py  guiguts.py  mainwindow.py  preferences.py  preferences_dialog.py  singleton.py  tk_utilities.py  utilities.py
src/guiguts/: CHANGELOG.md  __main__.py  application.py  ascii_tables.py  checkers.py  content_providing.py  dialogs.py  file.py  footnotes.py  highlight.py  html_convert.py  html_tools.py  illo_sn_fixup.py  maintext.py  mainwindow.py  misc_dialogs.py  misc_tools.py  page_details.py  preferences.py  preferences_dialog.py  project_dict.py  root.py  search.py  spell.py  utilities.py  widgets.py  word_frequency.py
src/guiguts/data/cp_files/: fcannos.json  no_hyphen.json  scannos.json
src/guiguts/data/dictionaries/: copyright_dict_es.txt  copyright_dict_it.txt  copyright_dict_nl.txt  copyright_dict_pt.txt  dict_nl_default.txt  hebelist.txt
src/guiguts/data/html/: html_header.txt
src/guiguts/data/icons/: license.txt
src/guiguts/data/regex_library/: dashes.json  diacritical_marks.json  italic_semantic.json  semantic_fixup.json
src/guiguts/data/scannos/: en-common.json  misspelled.json  regex.json
src/guiguts/data/tips/: tips.json
src/guiguts/tools/: bookloupe.py  jeebies.py  levenshtein.py  ppcomp.py  pphtml.py  pptxt.py
tests/: conftest.py  test_checkers.py  test_guiguts.py  test_internals.py  test_spellcheck.py  test_support.py  test_tools.py
tests/actual/: htmlconvert1.txt
tests/expected/: htmlconvert1.txt  htmlconvert2.txt  jeebies1.txt  jeebies2.txt  pphtml1.txt  pphtml2.txt  pptxt1.txt  pptxt2.txt  spell1.txt  spell2.txt
tests/input/: pp_complete.html  pp_complete.txt  pre_htmlgen.txt  raw_ctf.txt  spell1.txt
