[tool.poetry]
name = "guiguts"
version = "2.0.6"
description = "Guiguts version 2, Python/tkinter version"
authors = ["DP Guiguts Dev Team <windymilla@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "guiguts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^11.2"
pywin32 = {version = "^310", platform = "win32"}
roman = "^5.0"
regex = "^2024.11.6"
levenshtein = "^0.27.1"
requests = "^2.32.3"
darkdetect = "^0.8.0"
rapidfuzz = "^3.13.0"
packaging = "^25.0"
unicodedataplus = "^16.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1"
flake8 = "^7.2"
Sphinx = "^8.2.3"
pytest = "^8.3"
mypy = "^1.15"
pylint = "^3.3.7"
types-regex = "^2024.11.6"
types-requests = "^2.32"
build = "^1.2.2"

[tool.poetry.scripts]
guiguts = "guiguts.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "line-too-long",
  "logging-fstring-interpolation",
  "logging-not-lazy",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-public-methods",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-lines",
  "too-many-branches",
  "too-many-nested-blocks",
  "global-statement"
]

enable = ["c-extension-no-member"]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 0

[tool.pylint.'TYPECHECK']
extension-pkg-allow-list = ["unicodedataplus"]