[tool.poetry]
name = "guiguts"
version = "2.1.1"
description = "Guiguts version 2, Python/tkinter version"
authors = ["DP Guiguts Dev Team <windymilla@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "guiguts", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^12.2"
pywin32 = {version = ">=311,<312", platform = "win32"}
roman = "^5.2"
regex = "^2026.5.9"
levenshtein = "^0.27.3"
requests = "^2.34.2"
ttkthemes = "^3.3.0"
darkdetect = "^0.8.0"
rapidfuzz = "^3.14.5"
packaging = "^26.2"
lxml = "^6.1.1"
tinycss = "^0.4"
cssselect = "^1.4.0"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
black = "^26.5"
flake8 = "^7.3"
Sphinx = "^8.2"
pytest = "^9.0"
mypy = "^2.1"
pylint = "^4.0"
beautifulsoup4 = "^4.14"
types-regex = "^2026.5.9"
types-requests = "^2.33"
types-lxml = "^2026.2.16"
types-ttkthemes = "^3.3.0"
build = "^1.5"

[tool.poetry.scripts]
guiguts = "guiguts.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
confidence = ["HIGH", "CONTROL_FLOW", "INFERENCE", "INFERENCE_FAILURE", "UNDEFINED"]

disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "line-too-long",
  "logging-fstring-interpolation",
  "logging-not-lazy",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-public-methods",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-lines",
  "too-many-branches",
  "too-many-nested-blocks",
  "global-statement"
]

enable = ["c-extension-no-member"]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 0

[tool.pylint.'TYPECHECK']
extension-pkg-allow-list = ["unicodedataplus", "lxml.etree"]